add .bower.json for bower install

--- a/angular-dolphin/package.json
+++ b/angular-dolphin/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@172.18.7.20:zhangjunhui/angular-dolphin.git"
+    "url": "https://github.com/zjhsd2007/angular-dolphin.git"
   },
   "keywords": [
     "angular",
