--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,24 @@
 {
   "name": "angular-dolphin",
   "version": "1.0.0",
+  "description":"angular plugin",
   "main": "./angular-dolphin.js",
   "ignore": [],
-  "dependencies": {}
+  "license": "MIT",
+  "keywords": [
+    "angular",
+    "angular plugin",
+    "browser"
+  ],
+  "authors"["zhangjunhui <flyinksy@gmail.com>"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zjhsd2007/angular-dolphin.git"
+  },
+  "dependencies":{
+    "angular": "~1.2.28",
+    "angular-bootstrap": "~0.11.0",
+    "jquery": "~2.1.1"
+  },
+  "devDependencies":{}
 }
